[package]
name = "zkp_fiat_shamir_lib"
version = "0.1.0"
authors = ["Michał Mirończuk <michalmironczuk1@gmail.com>"]
description = "A Rust library for non-interactive ZKP Fiat-Shamir"
license = "MIT"
repository = "https://github.com/mirooon/zkp_fiat_shamir_lib"
homepage = "https://github.com/mirooon/zkp_fiat_shamir_lib"  
documentation = "https://docs.rs/zkp_fiat_shamir_lib"             
keywords = ["zkp", "cryptography", "fiat-shamir"]
categories = ["cryptography", "algorithms"]
edition = "2021"

[dependencies]
sha2 = "0.10.8"
